--- a/13.Slide In on Scroll/index.html
+++ b/13.Slide In on Scroll/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document by Ykss</title>
 </head>
 
 <body>
@@ -161,6 +161,26 @@
                 if (callNow) func.apply(context, args);
             };
         }
+
+        const sliderImages = document.querySelectorAll('.slide-in');
+
+        function checkSlide(e) {
+            
+            sliderImages.forEach(sliderImage => {
+                const slideInAt = (window.scrollY + window.innerHeight) -(sliderImage.height /2);
+                const imageBottom = sliderImage.offsetTop + sliderImage.height;
+                const isHalfShown = slideInAt > sliderImage.offsetTop;
+                const isNotScrolledPast = window.scrollY < imageBottom;
+                if(isHalfShown && isNotScrolledPast) {
+                    sliderImage.classList.add('active');
+                } else {
+                    sliderImage.classList.remove('active');
+                }
+            });
+        }
+
+        window.addEventListener('scroll', debounce(checkSlide));
+
     </script>
 
     <style>
