--- a/index.html
+++ b/index.html
@@ -10,37 +10,38 @@
     <h1>Javascript 30 Challenge</h1>
     <nav>
         <ul>
-            <li><a href="./1. Drum Kit/index.html">Drum Kit</a></li>
-            <li><a href="./2. Clock/index.html">Clock</a></li>
-            <li><a href="./3. CSS Variables/index.html">Css variables</a></li>
-            <li><a href="./4. Array Cardio Day 1/index.html">배열 활용하기(1)</a></li>
-            <li><a href="./5. Flex Panel Gallery/index.html">Flex Panel Gallery</a></li>
-            <li><a href="./6. Type Ahead/index.html">Type Ahead</a></li>
-            <li><a href="./7. Array Cardio Day 2/index.html">배열 활용하기(2)</a></li>
-            <li><a href="./8. Canvas/index.html">Canvas</a></li>
-            <li><a href="./9. DevTool Domination/index.html">개발자도구 활용하기</a></li>
-            <li><a href="./10. Hold Shift and Check Checkbox/index.html">체크박스 활용하기</a></li>
-            <li><a href="./11. Custom VideoPlayer/index.html">커스텀 비디오플레이어</a></li>
-            <li><a href="./12. Key Detection/index.html">키 입력 감지하기</a></li>
-            <li><a href="./13.Slide In on Scroll/index.html">Slide in On scroll</a></li>
-            <li><a href="./14. Reference vs copy/index.html">얕은 복사 vs 깊은 복사</a></li>
-            <li><a href="./15. LocalStorage/index.html">로컬 스토리지 활용</a></li>
-            <li><a href="./16. Mouse Move Shadow/index.html">Mouse Move Shadow</a></li>
-            <li><a href="./17. Sort Without Articles/index.html">정렬하기</a></li>
-            <li><a href="./18. Adding Up Times with Reduce/index.html">Adding Up Times with Reduce</a></li>
-            <li><a href="./19. Webcam Fun/index.html">웹캠 활용하기</a></li>
-            <li><a href="./20. Speech Detection/index.html">음성 인식</a></li>
-            <li><a href="./21. Geolocation/index.html">위치정보 활용하기(Geolocation)</a></li>
-            <li><a href="./22. Follow Along Links/index.html">Follow Along Links</a></li>
-            <li><a href="./23. Speech Synthesis/index.html">Speech Synthesis</a></li>
-            <li><a href="./24. Sticky Nav/index.html">Sticky Nav</a></li>
-            <li><a href="./25. Event Capture, Propagation, Bubbling and Once/index.html">Event Capture, Propagation, Bubbling and Once</a></li>
-            <li><a href="./26. Stripe Follow Along Dropdown/index.html">드롭다운 만들기</a></li>
-            <li><a href="./27. Click and Drag/index.html">클릭 & 드래그 활용</a></li>
-            <li><a href="./28. Video Speed Controller/index.html">비디오 재생속도 컨트롤</a></li>
-            <li><a href="./29. Countdown Timer/index.html">카운트다운 타이머</a></li>
-            <li><a href="./30. Whack A Mole Game/index.html">두더지 게임</a></li>
-
+            <div col-3 class="container">
+                <div><li><a href="./1. Drum Kit/index.html">Drum Kit</a></li></div>
+                <div><li><a href="./2. Clock/index.html">Clock</a></li></div>
+                <div><li><a href="./3. CSS Variables/index.html">Css variables</a></li></div>
+                <div><li><a href="./4. Array Cardio Day 1/index.html">배열 활용하기(1)</a></li></div>
+                <div><li><a href="./5. Flex Panel Gallery/index.html">Flex Panel Gallery</a></li></div>
+                <div><li><a href="./6. Type Ahead/index.html">Type Ahead</a></li></div>
+                <div><li><a href="./7. Array Cardio Day 2/index.html">배열 활용하기(2)</a></li></div>
+                <div><li><a href="./8. Canvas/index.html">Canvas</a></li></div>
+                <div><li><a href="./9. DevTool Domination/index.html">개발자도구 활용하기</a></li></div>
+                <div><li><a href="./10. Hold Shift and Check Checkbox/index.html">체크박스 활용하기</a></li></div>
+                <div><li><a href="./11. Custom VideoPlayer/index.html">커스텀 비디오플레이어</a></li></div>
+                <div><li><a href="./12. Key Detection/index.html">키 입력 감지하기</a></li></div>
+                <div><li><a href="./13.Slide In on Scroll/index.html">Slide in On scroll</a></li></div>
+                <div><li><a href="./14. Reference vs copy/index.html">얕은 복사 vs 깊은 복사</a></li></div>
+                <div><li><a href="./15. LocalStorage/index.html">로컬 스토리지 활용</a></li></div>
+                <div><li><a href="./16. Mouse Move Shadow/index.html">Mouse Move Shadow</a></li></div>
+                <div><li><a href="./17. Sort Without Articles/index.html">정렬하기</a></li></div>
+                <div><li><a href="./18. Adding Up Times with Reduce/index.html">Adding Up Times with Reduce</a></li></div>
+                <div><li><a href="./19. Webcam Fun/index.html">웹캠 활용하기</a></li></div>
+                <div><li><a href="./20. Speech Detection/index.html">음성 인식</a></li></div>
+                <div><li><a href="./21. Geolocation/index.html">위치정보 활용하기(Geolocation)</a></li></div>
+                <div><li><a href="./22. Follow Along Links/index.html">Follow Along Links</a></li></div>
+                <div><li><a href="./23. Speech Synthesis/index.html">Speech Synthesis</a></li></div>
+                <div><li><a href="./24. Sticky Nav/index.html">Sticky Nav</a></li></div>
+                <div><li><a href="./25. Event Capture, Propagation, Bubbling and Once/index.html">Event Capture, Propagation, Bubbling and Once</a></li></div>
+                <div><li><a href="./26. Stripe Follow Along Dropdown/index.html">드롭다운 만들기</a></li></div>
+                <div><li><a href="./27. Click and Drag/index.html">클릭 & 드래그 활용</a></li></div>
+                <div><li><a href="./28. Video Speed Controller/index.html">비디오 재생속도 컨트롤</a></li></div>
+                <div><li><a href="./29. Countdown Timer/index.html">카운트다운 타이머</a></li></div>
+                <div><li><a href="./30. Whack A Mole Game/index.html">두더지 게임</a></li></div>
+            </div>
         </ul>
     </nav>
     <script src="script.js"></script>
