Fix : Add h2 Tag

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Javascript 30 Challenge</h1>
+    <h2>업데이트 예정입니다.</h2>
     <nav>
         <ul>
             <div col-3 class="container">
